# C-VM

./: .gitignore  CMakeLists.txt  error.h  hash_table.c  hash_table.h  hash_table_test.c  main.c  parser.c  parser.h  tokenizer.c  tokenizer.h  tokenizer_test.c  utility.c  utility.h  value.c  value.h  vm.c  vm.h
test_data/: parser_test00.txt  parser_test01.txt  parser_test02.txt  test.c  test.py  tokenizer_test00.txt
